--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
+    "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "isomorphic-fetch": "^3.0.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.8",
     "nodemailer": "^6.4.17",
